--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body {
-  padding-top: 5rem; }
+  padding-top: 5rem;
+  font-family: 'M PLUS 1p', sans-serif; }
 
 .starter-template {
   padding: 3rem 1.5rem;
