--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,7 +1,13 @@
-body {
-  padding-top: 5rem;
-  font-family: 'M PLUS 1p', sans-serif;
+.bg-dark {
+    background-color: #343a40!important;
 }
+
+body {
+  padding-top: 0rem;
+  font-family: 'M PLUS 1p', sans-serif;
+  background-color: #fff;
+}
+
 .starter-template {
   padding: 3rem 1.5rem;
   text-align: center;
@@ -21,3 +27,36 @@ body {
     font-size: 3.5rem;
   }
 }
+
+img {
+	width: 100%;
+  margin: auto;
+  display: block;
+	border-radius: 0;
+	}
+
+  .row {
+    display: flex;
+  }
+
+.col-md-6{
+    padding: .50rem .50rem;
+    justify-content: space-between;
+}
+
+.shadow{
+  box-shadow: 20px 20px;
+}
+
+.container {
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+
+  .hashtag {
+      font-size: 30px;
+      color: #a8d0e6;
+  }
